add banner and atcBookingSystem to event
